--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
         "start": "npm run dev",
         "build": "npm run lint && tsc && vite build",
         "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "prepare": "husky install",
         "dev": "vite"
     },
     "dependencies": {
@@ -24,14 +28,21 @@
     },
     "devDependencies": {
         "@assetpack/core": "^1.5.2",
-        "@eslint/js": "^9.21.0",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.34.0",
         "@play-co/tsconfig": "^1.6.3",
         "eslint": "^9.21.0",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.2.6",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.5",
         "prettier": "^3.5.3",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.25.0",
         "vite": "^6.2.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write",
+        "*.{js,jsx,ts,tsx}": "eslint --fix"
     }
 }
