--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,11 @@
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.34.0",
         "@play-co/tsconfig": "^1.6.3",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
         "eslint": "^9.21.0",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.2.6",
+        "eslint-plugin-unused-imports": "^4.2.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.5",
         "prettier": "^3.5.3",
